Fast overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
 main {
   display: grid;
   grid-template-columns: 10rem auto;
-  grid-template-rows: 3rem auto;
+  grid-template-rows: 3rem calc(100vh - 3rem);
   gap: 0;
   width: 100vw;
   height: 100vh;
@@ -52,6 +52,8 @@ button {
   flex: 1;
   max-width: 100%;
   max-height: 100%;
+  overflow: auto;
+  padding: 5rem;
 }
 
 .flex-row {
@@ -68,4 +70,9 @@ button {
 
 .effect-ui {
   background-color: #5f5c72;
+}
+
+
+#game {
+  max-width: 100%;
 }
